@@ -3,7 +3,7 @@
 
   <groupId>net.sumaris</groupId>
   <artifactId>sumaris-pod</artifactId>
-  <version>2.3.5</version>
+  <version>2.4.0</version>
   <packaging>pom</packaging>
   <name>SUMARiS</name>
   <description>SUMARiS :: Maven parent</description>
@@ -1391,6 +1391,8 @@
             <excludes>
               <exclude>**/Abstract*.java</exclude>
             </excludes>
+            <!-- Enable Java 17 features -->
+            <argLine>--enable-preview</argLine>
             <!-- parallel execution NOT SUPPORT yet (cause access error on DB)
             <parallel>classes</parallel>
             <threadCount>10</threadCount>-->
